force-app/main/default/objects/Teacher__c/fields/BirthOfDates__c.field-meta.xml
<CustomField>
    <fullName>BirthOfDates__c</fullName>
    <label>BirthOfDate</label>
    <type>Date</type>
</CustomField>