force-app/main/default/objects/Teacher__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tr</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>