force-app/main/default/objects/Teacher__c/fields/Phones__c.field-meta.xml
<CustomField>
    <fullName>Phones__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>