force-app/main/default/objects/Teacher__c/fields/Salary11__c.field-meta.xml
<CustomField>
    <fullName>Salary11__c</fullName>
    <formula>IF(ISPICKVAL(Gender__c, &quot;Mr&quot;),  Salary__c *1.1,
    IF(YEAR( TODAY() ) &gt; 30 -  YEAR(BirthOfDates__c ),  Salary__c *1.3, Salary__c *1.2
            ) 
   )  +

If(  BEGINS(FirstName__c, &quot;A&quot;) , Salary__c *0.1 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>