force-app/main/default/objects/Teacher__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>turkey</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>WASHINGTON</fullName>
            </value>
            <value>
                <fullName>limburg</fullName>
            </value>
            <value>
                <fullName>frisland</fullName>
            </value>
            <value>
                <fullName>noordholland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>