force-app/main/default/objects/Teacher__c/fields/subjects__c.field-meta.xml
<CustomField>
    <fullName>subjects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>subject</label>
    <referenceTo>subject__c</referenceTo>
    <relationshipLabel>Teachers</relationshipLabel>
    <relationshipName>Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>