force-app/main/default/objects/Teacher__c/validationRules/salary.validationRule-meta.xml
<ValidationRule>
    <fullName>salary</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Salary__c &lt;3000  , 10000 &lt;Salary__c   )</errorConditionFormula>
    <errorMessage>salary e dikkat</errorMessage>
</ValidationRule>